# cpi

./: .gitignore  .gitmodules  README.md  __init__.py  __setup.py  const.py  cpi.py  functions.py  setup.cfg  setup.py  util.py
.github/workflows/: test.yml
cpi/: .gitignore  __init__.py  generator.py
cpi.egg-info/: PKG-INFO  SOURCES.txt
cubiomespi/: cpi.py
cubiomespi.egg-info/: PKG-INFO  SOURCES.txt
cubiomespi/lib/: compile.txt
lib/: code.c  compile.txt  newlib.c
src/: test.py  testing.py
src/cubimespi.egg-info/: PKG-INFO  SOURCES.txt
src/cubiomespi/: .gitmodules  __init__.py  constants.py  cubiomes.py  util.py
src/cubiomespi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cubiomespi/lib/: newlib.c
