[metadata]
name = cubiomespi
version = 1.0
author = Languste
author_email = yotrustmethisismymail@john.com
description = This library is a python interface for cubiomes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Languste27/cpi

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = True

[options.package_data]
cubiomespi = 
    lib/lib.dll
    lib/compile.txt
    lib/newlib.c

[options.packages.find]
where = src